--- a/index.html
+++ b/index.html
@@ -5,52 +5,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>SuperMario</title>
+    <title>Mario Bros</title>
 </head>
 
 <body>
 
+    <div class="mascara-formulario" onclick="esconderForm()"></div>
+
     <div class="header">
-        <img src="./img/logo-header-mb.png" alt="header-mario">
-        <a>Home
-            
-        </a>
-        <a>Nossos Serviços</a>
-        <a>Fale Conosco</a>
+        <img src="./img/logo-header.png" alt="logo-header">
+        <a>HOME</a>
+        <a>NOSSOS SERVIÇOS</a>
+        <a>FALE CONOSCO</a>
     </div>
 
     <div class="caixa-mae">
-
         <div class="caixa-principal">
-            <img src="./img/logo-mb.png" alt="logo-mario" class="logo-mario">
+            <img src="./img/logo.png" alt="logo do mario bros" class="logo-mario">
+            <p>Encanadores Mário & Luigi - Resolvendo Seus Problemas Com Estilo! </p>
+            <p>Você já se encontrou em uma situação de emergência com encanamentos?<br>
+                Vazamentos inesperados, canos
+                entupidos ou torneiras que não param de pingar?<br>
+                Não se preocupe, porque estamos aqui para salvar o seu
+                dia!<br>
+                Apresentamos a vocês os encanadores mais famosos do Reino dos Cogumelos - Mário e Luigi!</p>
 
-            <p>🔧Encanadores Mario & Luigi - Resolvendo Seus Problemas Hidráulicos Com Estilo!</p>
-            <br>
-            <p>Você já se encontrou em uma situação de emergência com encanamento? Vazamentos inesperados, canos
-                entupidos ou torneiras que não param de pingar? Não se preocupe, porque estamos aqui para salvar o dia!
-                Apresentamos a vocês os encanadores mais famosos do Reino dos Cogumelos - Mario e Luigi!</p>
-            <button>Entre em Contato</button>
+            <button onclick="mostrarForm()">ENTRE EM CONTATO</button>
         </div>
 
         <div>
-            <img src="./img/mario&luigi.png" alt="logo-mario&luigi" class="img-mario-luigi">
+            <img src="./img/mario.png" alt="logo Mario e Luigi" class="img-luigi-mario">
         </div>
 
     </div>
 
-
     <div class="caixa-video">
-        <video src="./img/video-mb.mp4" autoplay muted loop></video>
+        <video src="./img/video.mp4" autoplay loop muted></video>
         <div class="mascara"></div>
     </div>
 
-    <a href="https://api.whatsapp.com/send?phone=5599999999999&text=Tenho%20interesse%20nos%20servi%C3%A7os%20do%20M%C3%A1rio."
-        class="link-wpp">
-        <img src="./img/whatsapp-logo.png" alt="imagem-wpp">
-
+    <a href="https://w.app/rn896V">
+        <img src="./img/whatsapp.png" alt="link do wpp" class="img-wpp">
     </a>
 
-</body>
 
+    <form 
+        class="formulario"
+        action="https://formcarry.com/s/4J2GgMW9FKc"
+        method="POST"
+        enctype="multipart/form-data">
+            <input placeholder="Seu nome" type="text" name="nome">
+            <input placeholder="Seu telefone" type="tel" name="telefone">
+            <textarea placeholder="Em que posso ajudar?" name="descricao"></textarea>
+            <button type="submit">PEDIR ORÇAMENTO</button>
+    </form>
+</body>
+<script src="./scripts.js"></script>
 
 </html>
